Fix for bug #9551 (Show commands fail)